# clawtracerx

./: .gitignore  .ralphrc  AGENTS.md  ANALYSIS_REPORT.md  CLAUDE.md  CONTRIBUTING.md  FRONTEND_MODERNIZATION_PROPOSAL.md  OPENCLAW_AGENT_GUIDE.md  README.md  SESSION_ANALYSIS_SPEC.md  cli.py  ctrace.py  gateway.py  ocmon.py  parser.py  pyproject.toml  restart.sh  update_note.md  web.py
.github/workflows/: ci.yml  release.yml
.ralph/: AGENT.md  PROMPT.md  fix_plan.md  prd.json  progress.md  ralph.sh
clawtracerx/: __main__.py  cli.py  config.py  gateway.py  session_parser.py  web.py
clawtracerx/static/: app.js  i18n.js  style.css  turns.js
clawtracerx/templates/: base.html  coming_soon.html  cost.html  detail.html  graph.html  home.html  lab.html  schedule.html  sessions.html  settings.html
docs/qa/: qa-report-2026-03-21.md
docs/screenshots/: README.md
npm/: install.js  package.json
skills/ctrace/: SKILL.md
static/: app.js  style.css  turns.js
templates/: base.html  cost.html  detail.html  graph.html  lab.html  sessions.html
tests/: conftest.py  test_cli.py  test_config.py  test_gateway.py  test_session_parser.py  test_web.py
tests/fixtures/: minimal_session.jsonl
